--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div
                     class="flex items-center gap-1 px-4 py-1 rounded-2xl bg-[#06C167] text-white font-medium cursor-pointer">
-                    <span>2 Copy</span>
+                    <h1><span id="copy-value">0</span> Copy</h1>
                 </div>
             </div>
         </div>
@@ -77,14 +77,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">National Emergency Number</h2>
+                        <h2 class="font-bold message-title">National Emergency Number</h2>
                         <p class="text-gray-500 text-sm message-value">National Emergency</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">999</h1>
                         <span class=" bg-gray-100  items-center  px-4 py-2 rounded-2xl h-[40px] w-[60px]">All</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -102,14 +102,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Police Helpline Number</h2>
+                        <h2 class="font-bold message-title">Police Helpline Number</h2>
                         <p class="text-gray-500 text-sm message-value">Police</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">999</h1>
                         <span class=" bg-gray-100  items-center  px-2 py-2 rounded-2xl h-[40px] w-[60px]">Police</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -126,14 +126,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Fire Service Number</h2>
+                        <h2 class="font-bold message-title">Fire Service Number</h2>
                         <p class="text-gray-500 text-sm message-value">Fire Service</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">999</h1>
                         <span class=" bg-gray-100  items-center  px-4 py-2 rounded-2xl h-[40px] w-[60px]">Fire</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -150,14 +150,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Ambulance Service</h2>
+                        <h2 class="font-bold message-title">Ambulance Service</h2>
                         <p class="text-gray-500 text-sm message-value">Ambulance</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">1994-999999</h1>
                         <span class=" bg-gray-100  items-center  px-2 py-2 rounded-2xl h-[40px] w-[60px]">Health</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -175,14 +175,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Women & Child Helpline</h2>
+                        <h2 class="font-bold message-title">Women & Child Helpline</h2>
                         <p class="text-gray-500 text-sm message-value">Women & Child Helpline</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">109</h1>
                         <span class=" bg-gray-100  items-center  px-4 py-2 rounded-2xl h-[40px] w-[60px]">Help</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -200,14 +200,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Anti-Corruption Helpline</h2>
+                        <h2 class="font-bold message-title">Anti-Corruption Helpline</h2>
                         <p class="text-gray-500 text-sm message-value">Anti-Corruption</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">106</h1>
                         <span class=" bg-gray-100  items-center  px-4 py-2 rounded-2xl h-[40px] w-[60px]">Govt.</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -225,14 +225,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Electricity Helpline</h2>
+                        <h2 class="font-bold message-title">Electricity Helpline</h2>
                         <p class="text-gray-500 text-sm message-value">Electricity Outage</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">16216</h1>
                         <span class=" bg-gray-100  items-center  px-2 py-2 rounded-2xl h-[40px] w-[80px]">Electricity</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -250,14 +250,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Brac Helpline</h2>
+                        <h2 class="font-bold message-title">Brac Helpline</h2>
                         <p class="text-gray-500 text-sm message-value">Brac</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">16445</h1>
                         <span class=" bg-gray-100  items-center  px-3 py-2 rounded-2xl h-[40px] w-[60px]">NGO</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -275,14 +275,14 @@
                             </button>
                         </div>
 
-                        <h2 class="font-bold">Bangladesh Railway Helpline </h2>
+                        <h2 class="font-bold message-title">Bangladesh Railway Helpline </h2>
                         <p class="text-gray-500 text-sm message-value">Bangladesh Railway</p>
 
                         <h1 class="text-2xl font-bold mt-2 message-number">163</h1>
                         <span class=" bg-gray-100  items-center  px-2 py-2 rounded-2xl h-[40px] w-[60px]">Travel</span>
 
                         <div class="flex gap-2 mt-4">
-                            <button class="flex-1 border rounded-lg py-2 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
+                            <button class="flex-1 border rounded-lg py-2 text-sm copy-text"><i class="fa-solid fa-copy"></i> Copy</button>
                             <button class="flex-1 bg-green-600 text-white rounded-lg py-2 text-sm card-find"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
@@ -290,14 +290,14 @@
 
                 </div>
 
-                <!-- Right Side (Call History) -->
+                <!-- Right Side -->
                 <div class="col-span-1 bg-white rounded-xl shadow p-4">
                     <div class="flex justify-between items-center mb-2">
                         <h2 class="font-bold"><i class="fa-solid fa-clock"></i> Call History</h2>
                         <button id="clear-button" class="text-sm text-white bg-green-500 px-4 py-2 rounded-3xl">Clear</button>
                     </div>
 
-                     <div id="transaction-part">
+                     <div id="history-add">
 
                      </div>
                     
