--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col-span-3 grid grid-cols-3 gap-4">
 
                     <!-- Card 1-->
-                    <div class=" parent bg-white rounded-xl shadow p-4 flex flex-col justify-between">
+                    <div class=" parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
@@ -91,7 +91,7 @@
 
                     <!-- card 2 -->
                     
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#d4dbf5] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/police.png" alt="" class="h-6 w-6">
@@ -115,7 +115,7 @@
                     </div>
 
                     <!-- cart 3 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/fire-service.png" alt="" class="h-6 w-6">
@@ -139,7 +139,7 @@
                     </div>
 
                     <!-- card 4 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/ambulance.png" alt="" class="h-6 w-6">
@@ -164,7 +164,7 @@
 
 
                     <!-- card 5 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
@@ -189,7 +189,7 @@
 
 
                     <!-- card 6 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
@@ -214,7 +214,7 @@
 
 
                     <!-- card 7 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
@@ -239,7 +239,7 @@
 
 
                     <!-- card 8 -->
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
@@ -264,7 +264,7 @@
 
                     <!-- card 9 -->
 
-                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between ">
+                    <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
                                 <img src="./images/emergency.png" alt="" class="h-6 w-6">
