responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
     <div class="bg-[#cedbd7]">
         <div class="p-8 ">
-            <div class="grid grid-cols-4 gap-4   ">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4  ">
                 <!-- Left Side-->
-                <div class="col-span-3 grid grid-cols-3 gap-4">
+                <div class="col-span-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
 
                     <!-- Card 1-->
                     <div class=" parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
