readme file push

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<!-- class="max-w-lg sm:max-w-xl mx-auto" -->
 <body >
     <div class="bg-white ">
         <div class="flex justify-between items-center px-4 py-4">
@@ -63,7 +62,7 @@
         <div class="p-8 ">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4  ">
                 <!-- Left Side-->
-                <div class="col-span-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+                <div class="col-span-3 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 gap-4">
 
                     <!-- Card 1-->
                     <div class=" parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
@@ -242,7 +241,7 @@
                     <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
-                                <img src="./images/emergency.png" alt="" class="h-6 w-6">
+                                <img src="./images/brac.png" alt="" class="h-6 w-6">
                             </div>
 
                             <button>
@@ -267,7 +266,7 @@
                     <div class="parent bg-white rounded-xl shadow p-4 flex flex-col justify-between card">
                         <div class="flex justify-between items-start">
                             <div class="bg-[#FFE3E2] rounded-xl p-3 flex items-center justify-center w-12 h-12">
-                                <img src="./images/emergency.png" alt="" class="h-6 w-6">
+                                <img src="./images/Bangladesh-Railway.png" alt="" class="h-6 w-6">
                             </div>
 
                             <button>
